﻿1.5.0-rc.3 (2023-08-XX)
------------------
+ [removed][fj-doc-val-pdfbox] removed deprecated class org.fugerit.java.doc.val.pdf.boc.PdfboxValidator [1.5.0-rc.3] 
+ [enhancement] added sonar cloud quality gate [1.5.0-rc.3] 
+ [enhancement][fj-doc-lib-autodoc] now the default html does not use a template but the standard html generation [1.5.0-rc.3]
+ [enhancement][fj-doc-freemarker] html type handler automatically add doctype and xml lang (default to 'en') [1.5.0-rc.3]
+ [enhancement][fj-doc-base] doc-2-1.xsd (added new 'alt' attribute for table) [1.5.0-rc.3]
+ [enhancement][fj-doc-freemarker] added doctype definition to html type handler [1.5.0-rc.3]
+ [documentation][fj-doc-base]Added documentation to the doc-2-0.xsd [1.5.0-rc.2]
+ [enhancement][fj-doc-mod-fop] optimization in style rendering for FO/PDF Type Handler [1.5.0-rc.2]
+ [enhancement][fj-doc-mod-fop] added support for table 'padding' and 'spacing' (convert to fo cell padding and margin) [1.5.0-rc.2]
+ [enhancement][fj-doc-freemarker] added support for table 'padding' and 'spacing' (convert to html cell padding and margin) [1.5.0-rc.2]
+ [enhancement][fj-doc-base] Added generic meta information 'default-table-spacing' and 'default-table-padding' [1.5.0-rc.2]
+ [enhancement][fj-doc-playground-quarkus] updated quarkus version to 3.2.4.Final [1.5.0-rc.2]
+ [enhancement][fj-doc-base] Added generic meta information 'default-cell-border-width' [1.5.0-rc.1]
+ [enhancement][fj-doc-freemarker] optimization in style rendering for HTML Type Handler [1.5.0-rc.1]
+ [fix][fj-doc-freemarker] fixed multiple parents loading for FreemarkerDocProcessConfig [1.4.6-rc.2]
+ [documentation][fj-doc-lib-autodoc]Some fix in meta info generation [1.4.6-rc.1]
+ [documentation][fj-doc-lib-autodoc]Added anchor to specific meta info [1.4.6-rc.1]
+ [documentation][fj-doc-base]Improved javadoc [1.4.6-rc.1]
+ [enhancement][fj-doc-freemarker] added compatibility process() + validation method to FreemarkerDocProcessConfig [1.4.6-rc.1]
