@@ -7,7 +7,7 @@ import org.fugerit.java.doc.base.model.DocBase;
 
 public class DocJsonFacade {
 
-	private DocJsonFacade() {}
+	private DocJsonFacade() {}	// java:S1118
 	
 	public static DocBase parse( Reader is ) throws DocException {
 		DocJsonParser parser = new DocJsonParser();
