@@ -11,7 +11,7 @@ public class DocHelperEuro extends DocHelper {
 			char c = temp.charAt( k );
 			int i = (int)c;
 			if ( i == 164 ) {
-				text.append( DocConstants.DEF.getEuro() );
+				text.append( DocConstants.getInstance().getEuro() );
 			} else {
 				text.append( c );
 			}
